modified description in the package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wetherapitest",
   "version": "1.0.0",
-  "description": "weather page malta",
+  "description": "Weather on the Rock Malta",
   "main": "index.js",
   "author": "designhorf <designhorf@gmail.com>",
   "license": "MIT",
